--- a/app/src/main/res/layout/lemma_recycler_item.xml
+++ b/app/src/main/res/layout/lemma_recycler_item.xml
@@ -14,7 +14,7 @@
             android:fontFamily="@font/tinos_italic"
             android:paddingTop="4dp"
             android:paddingBottom="4dp"
-            android:textColor="@color/kobaltblauw"
+            android:textColor="@color/blue_text_color"
             android:textSize="20sp"
             android:textStyle="normal|italic"
             app:layout_constraintEnd_toStartOf="@+id/speaker"
@@ -28,7 +28,6 @@
             android:gravity="center"
             android:text="@string/speak"
             android:textAlignment="center"
-            android:textColor="#757575"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -41,7 +40,7 @@
             android:fontFamily="sans-serif"
             android:paddingTop="4dp"
             android:paddingBottom="4dp"
-            android:textColor="#757575"
+            android:textColor="@color/normal_text_color"
             android:textSize="15sp"
             app:layout_constraintEnd_toStartOf="@id/speaker"
             app:layout_constraintStart_toStartOf="parent"
