--- a/app/src/main/res/layout/verb_game.xml
+++ b/app/src/main/res/layout/verb_game.xml
@@ -5,8 +5,9 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/activity_bgcolor"
         tools:context=".VerbGame"
-        tools:ignore="HardcodedText"
+        tools:ignore="HardcodedText,UseSwitchCompatOrMaterialXml"
         >
     <TextView
             android:id="@+id/text_ask"
@@ -15,16 +16,18 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="8dp"
-            android:text="@string/ask"
+            android:background="@drawable/item_background"
             android:fontFamily="@font/tinos_italic"
-            android:letterSpacing="0.02"
             android:gravity="start|center_vertical"
+            android:letterSpacing="0.02"
+            android:paddingStart="4dp"
+            android:text="@string/ask"
+            android:textColor="@color/blue_text_color"
             android:textSize="20sp"
-            android:textColor="@color/kobaltblauw"
             android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             />
     <TextView
             android:id="@+id/text_reveal"
@@ -33,7 +36,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:text="@string/reveal"
-            android:fontFamily="@font/tinos"
+            android:fontFamily="@font/tinos_italic"
             android:textSize="20sp"
             android:gravity="start|center_vertical"
             app:layout_constraintTop_toBottomOf="@+id/text_ask"
@@ -50,13 +53,14 @@
             android:text=""
             android:textSize="20sp"
             android:visibility="invisible"
+            android:textColor="@color/blue_text_color"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text_reveal"
             />
     <View
             android:id="@+id/divider5"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="2dp"
             android:layout_margin="8dp"
             android:background="?android:attr/listDivider"
             app:layout_constraintStart_toStartOf="parent"
@@ -71,9 +75,10 @@
             android:text="Vervoegen "
             android:textSize="16sp"
             android:textStyle="bold"
-            android:textColor="?attr/colorAccent"
+            android:textColor="@color/colorAccent"
             app:layout_constraintBottom_toTopOf="@+id/divider3"
             app:layout_constraintStart_toStartOf="parent"
+
             />
     <TextView
             android:id="@+id/lbl_herken"
@@ -83,15 +88,15 @@
             android:layout_marginBottom="8dp"
             android:labelFor="@id/sw_mode"
             android:text="Herkennen"
+            android:textColor="@color/blue_text_color"
             android:textSize="16sp"
-            android:textColor="@android:color/background_dark"
-            app:layout_constraintStart_toEndOf="@+id/sw_mode"
             app:layout_constraintBottom_toTopOf="@+id/divider3"
+            app:layout_constraintStart_toEndOf="@+id/sw_mode"
             />
     <View
             android:id="@+id/divider3"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="2dp"
             android:layout_margin="8dp"
             android:background="?android:attr/listDivider"
             app:layout_constraintStart_toStartOf="parent"
@@ -103,45 +108,45 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:background="@color/labelBackground"
+            android:background="@color/label_bgcolor"
             android:paddingStart="3dp"
             android:paddingEnd="3dp"
             android:text="Tijdsvorm:"
+            android:textColor="@color/normal_text_color"
             android:textStyle="bold"
-            android:textColor="@color/border_color"
-            app:layout_constraintTop_toBottomOf="@id/divider3"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/divider_vert_1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/divider3"
             />
     <TextView
             android:id="@+id/lbl_persoonsvorm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:background="@color/labelBackground"
+            android:background="@color/label_bgcolor"
             android:paddingStart="3dp"
             android:paddingEnd="3dp"
             android:text="Persoonsvorm:"
+            android:textColor="@color/normal_text_color"
             android:textStyle="bold"
-            android:textColor="@color/border_color"
+            app:layout_constraintBottom_toTopOf="@+id/chk_1"
             app:layout_constraintEnd_toStartOf="@+id/divider_vert_2"
             app:layout_constraintStart_toEndOf="@+id/divider_vert_1"
-            app:layout_constraintBottom_toTopOf="@+id/chk_1"
             />
     <TextView
             android:id="@+id/lbl_level"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:background="@color/labelBackground"
+            android:background="@color/label_bgcolor"
             android:paddingStart="3dp"
             android:paddingEnd="3dp"
             android:text="@string/level"
+            android:textColor="@color/normal_text_color"
             android:textStyle="bold"
-            android:textColor="@color/border_color"
-            app:layout_constraintTop_toBottomOf="@id/divider3"
-            app:layout_constraintStart_toEndOf="@+id/divider_vert_2"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/divider_vert_2"
+            app:layout_constraintTop_toBottomOf="@id/divider3"
             />
     <CheckBox
             android:id="@+id/chk_enestotas"
@@ -193,13 +198,13 @@
             />
     <View
             android:id="@+id/divider_vert_1"
-            android:layout_width="1dp"
+            android:layout_width="2dp"
             android:layout_height="0dp"
             android:layout_marginStart="8dp"
             android:background="?android:attr/listDivider"
-            app:layout_constraintTop_toBottomOf="@+id/divider3"
             app:layout_constraintBottom_toTopOf="@+id/divider2"
             app:layout_constraintStart_toEndOf="@+id/chk_paratatikos"
+            app:layout_constraintTop_toBottomOf="@+id/divider3"
             />
     <CheckBox
             android:id="@+id/chk_1"
@@ -276,7 +281,7 @@
             />
     <View
             android:id="@+id/divider_vert_2"
-            android:layout_width="1dp"
+            android:layout_width="2dp"
             android:layout_height="0dp"
             android:layout_marginStart="8dp"
             android:background="?android:attr/listDivider"
@@ -331,7 +336,7 @@
     <View
             android:id="@+id/divider2"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="2dp"
             android:layout_marginBottom="8dp"
             android:background="?android:attr/listDivider"
             app:layout_constraintBottom_toTopOf="@+id/btn_fout"
@@ -342,8 +347,9 @@
             android:layout_width="80dp"
             android:layout_height="@dimen/nav_btn_height"
             android:layout_marginBottom="8dp"
-            android:text="Rijtje"
+            android:text="rijtje"
             android:textAllCaps="false"
+            android:textColor="@color/blue_text_color"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/btn_verbal"
             />
@@ -364,18 +370,18 @@
             android:layout_marginBottom="8dp"
             android:text="vorige"
             android:textAllCaps="false"
-            android:textColor="@color/design_default_color_primary"
+            android:textColor="@color/normal_text_color"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/btn_show_ladder"
             />
     <Button
             android:id="@+id/btn_fout"
-            android:layout_width="80dp"
+            android:layout_width="wrap_content"
             android:layout_height="@dimen/nav_btn_height"
             android:layout_marginBottom="8dp"
-            android:text="Opnieuw"
+            android:text="opnieuw"
             android:textAllCaps="false"
-            android:textColor="@android:color/holo_red_light"
+            android:textColor="@color/colorAccent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btn_go"
             />
@@ -385,9 +391,9 @@
             android:layout_height="@dimen/nav_btn_height"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:text="Ga door"
+            android:text="ga door"
             android:textAllCaps="false"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/colorPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             />
