--- a/app/src/main/res/drawable/item_background.xml
+++ b/app/src/main/res/drawable/item_background.xml
@@ -1,18 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-       android:shape="rectangle" >
+        android:shape="rectangle"
+        >
 
     <!-- View background color -->
-    <solid
-            android:color="@color/color_item_background" >
-    </solid>
+    <solid android:color="@color/listitem_bgcolor" />
 
     <!-- View border color and width -->
     <stroke
             android:width="0.5dp"
-            android:color="@color/color_item_border" >
-    </stroke>
-
-
-
+            android:color="@color/listitem_border_color"
+            />
 </shape>
