--- a/app/src/main/res/layout/filter_and_sort.xml
+++ b/app/src/main/res/layout/filter_and_sort.xml
@@ -11,7 +11,7 @@
         app:layout_constraintTop_toTopOf="parent"
 
         tools:context=".FilterAndSort"
-        tools:ignore="Autofill"
+        tools:ignore="Autofill,UseSwitchCompatOrMaterialXml"
         >
 
     <TextView
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:layout_marginBottom="0dp"
-            android:background="@color/labelBackground"
+            android:background="@color/label_bgcolor"
             android:paddingStart="3dp"
             android:paddingEnd="3dp"
             android:text="@string/level"
@@ -74,7 +74,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
-            android:background="@color/labelBackground"
+            android:background="@color/label_bgcolor"
             android:labelFor="@id/text_length"
             android:paddingStart="3dp"
             android:paddingEnd="3dp"
@@ -89,7 +89,7 @@
             android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:background="@drawable/backgroundborder"
+            android:background="@drawable/background_with_border"
             android:gravity="center_horizontal"
             android:imeOptions="actionDone"
             android:inputType="number"
@@ -101,7 +101,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:background="@color/labelBackground"
+            android:background="@color/label_bgcolor"
             android:paddingStart="3dp"
             android:paddingEnd="3dp"
             android:text="@string/lemma_length_post"
@@ -135,7 +135,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
-            android:background="@color/labelBackground"
+            android:background="@color/label_bgcolor"
             android:paddingStart="3dp"
             android:paddingEnd="3dp"
             android:text="@string/initiaal"
@@ -193,7 +193,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
-            android:background="@color/labelBackground"
+            android:background="@color/label_bgcolor"
             android:labelFor="@id/text_blocksize"
             android:paddingStart="3dp"
             android:paddingEnd="3dp"
@@ -209,7 +209,7 @@
             android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:background="@drawable/backgroundborder"
+            android:background="@drawable/background_with_border"
             android:defaultFocusHighlightEnabled="true"
             android:gravity="center_horizontal"
             android:imeOptions="actionDone"
@@ -222,7 +222,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:background="@color/labelBackground"
+            android:background="@color/label_bgcolor"
             android:paddingStart="3dp"
             android:paddingEnd="3dp"
             android:text="@string/block_size_post"
@@ -255,7 +255,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
-            android:background="@color/labelBackground"
+            android:background="@color/label_bgcolor"
             android:paddingStart="3dp"
             android:paddingEnd="3dp"
             android:text="@string/sort"
@@ -321,7 +321,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
-            android:background="@color/labelBackground"
+            android:background="@color/label_bgcolor"
             android:labelFor="@id/text_threshold"
             android:paddingStart="3dp"
             android:paddingEnd="3dp"
@@ -336,7 +336,7 @@
             android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:background="@drawable/backgroundborder"
+            android:background="@drawable/background_with_border"
             android:gravity="center_horizontal"
             android:imeOptions="actionDone"
             android:inputType="number"
@@ -348,7 +348,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:background="@color/labelBackground"
+            android:background="@color/label_bgcolor"
             android:paddingStart="3dp"
             android:paddingEnd="3dp"
             android:text="@string/threshold_post"
@@ -367,6 +367,7 @@
             android:text="@string/hide_jumpers"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/divider05"
+
             />
     <Button
             android:id="@+id/btn_select"
