--- a/app/src/main/res/layout/flashcard.xml
+++ b/app/src/main/res/layout/flashcard.xml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#C5E1A5"
+        android:background="@color/activity_bgcolor"
         tools:context=".FlashCard"
         tools:ignore="ContentDescription, HardcodedText"
         >
+    <TextView
+            android:id="@+id/txt_progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="4dp"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toTopOf="@+id/btn_prev_block"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:text="0-0"
+            />
     <ImageButton
             android:id="@+id/ibtn_flag_greek"
             android:layout_width="30dp"
@@ -19,7 +29,7 @@
             android:contentDescription="@string/flag_greek"
             android:cropToPadding="true"
             android:scaleType="fitCenter"
-            android:src="@drawable/flaggrsmall"
+            android:src="@drawable/flag_gr_small"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/text_nederlands"
             />
@@ -106,7 +116,7 @@
             android:layout_width="match_parent"
             android:layout_height="192dp"
             android:layout_margin="2dp"
-            android:background="@drawable/backgroundborder"
+            android:background="@drawable/background_with_border"
             android:clickable="true"
             android:fontFamily="@font/tinos_italic"
             android:letterSpacing="0.02"
@@ -123,7 +133,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/ibtn_flag_greek"
             />
-
     <ImageButton
             android:id="@+id/ibtn_flag_nl"
             android:layout_width="30dp"
@@ -134,7 +143,7 @@
             android:contentDescription="@string/flag_dutch"
             android:cropToPadding="true"
             android:scaleType="fitCenter"
-            android:src="@drawable/flagnlsmall"
+            android:src="@drawable/flag_nl_small"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             />
@@ -143,7 +152,7 @@
             android:layout_width="match_parent"
             android:layout_height="92dp"
             android:layout_margin="2dp"
-            android:background="@drawable/backgroundborder"
+            android:background="@drawable/background_with_border"
             android:paddingStart="3dp"
             android:paddingEnd="3dp"
             android:textColor="@android:color/black"
@@ -153,13 +162,13 @@
             app:layout_constraintTop_toBottomOf="@+id/ibtn_flag_nl"
             />
     <TextView
-            android:id="@+id/lbl-wrong"
+            android:id="@+id/lbl-correct"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="4dp"
-            android:text="@string/emoji_wrong"
-            android:textColor="?android:attr/colorAccent"
+            android:text="@string/emoji_correct"
+            android:textColor="?android:attr/colorPrimary"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="@id/text_grieks"
             app:layout_constraintEnd_toEndOf="@id/text_grieks"
@@ -196,8 +205,8 @@
             android:background="@drawable/shadow"
             android:paddingStart="3dp"
             android:paddingEnd="3dp"
-            app:layout_constraintTop_toBottomOf="@+id/img_paperclip"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/img_paperclip"
             tools:layout_editor_absoluteY="384dp"
             />
     <TextView
@@ -206,7 +215,7 @@
             android:layout_height="92dp"
             android:layout_margin="2dp"
             android:layout_marginStart="8dp"
-            android:background="@drawable/backgroundborder"
+            android:background="@drawable/background_with_border"
             android:paddingStart="3dp"
             android:paddingEnd="3dp"
             android:textSize="16sp"
@@ -215,13 +224,13 @@
             app:layout_constraintTop_toBottomOf="@+id/img_paperclip"
             />
     <TextView
-            android:id="@+id/lbl_correct"
+            android:id="@+id/lbl-wrong"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="4dp"
-            android:text="@string/emoji_correct"
-            android:textColor="@color/colorPrimary"
+            android:text="@string/emoji_wrong"
+            android:textColor="?android:attr/colorAccent"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="@id/shadow_note"
             app:layout_constraintEnd_toEndOf="@id/shadow_note"
@@ -270,7 +279,7 @@
             android:layout_marginBottom="8dp"
             android:elevation="2dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/flaggrsmall"
+            android:src="@drawable/flag_gr_small"
             android:textAllCaps="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -287,7 +296,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/btn_reveal_answer"
             app:srcCompat="@drawable/paperclip"
-
             />
     <Button
             android:id="@+id/btn_speak"
@@ -307,7 +315,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:text="@string/btn_caption_prev_block"
-            android:textSize="24sp"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btn_next_block"
             />
@@ -318,7 +326,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:text="@string/btn_caption_next_block"
-            android:textSize="24sp"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             />
@@ -339,5 +347,4 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:visibility="visible"
             />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
