--- a/app/src/main/res/layout/hangman.xml
+++ b/app/src/main/res/layout/hangman.xml
@@ -5,6 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/activity_bgcolor"
         tools:context=".Hangman"
         >
 
@@ -16,7 +17,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="16dp"
-            android:background="@drawable/backgroundborder"
+            android:background="@drawable/background_with_border"
             />
     <TextView
             android:id="@+id/lbl_goed"
@@ -41,7 +42,7 @@
             android:textSize="18sp"
             android:letterSpacing="0.2"
             android:textStyle="bold"
-            android:background="@drawable/backgroundborder"
+            android:background="@drawable/background_with_border"
             />
     <TextView
             android:text="@string/error"
