--- a/app/src/main/res/layout/luisterlijst.xml
+++ b/app/src/main/res/layout/luisterlijst.xml
@@ -13,9 +13,9 @@
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="16dp"
             android:text="@string/btn_caption_next_block"
-            android:textSize="24sp"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             />
     <Button
             android:id="@+id/btn_prev_block"
@@ -24,9 +24,9 @@
             android:layout_marginStart="8dp"
             android:layout_marginBottom="16dp"
             android:text="@string/btn_caption_prev_block"
-            android:textSize="24sp"
-            app:layout_constraintStart_toStartOf="parent"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             />
     <Button
             android:id="@+id/btn_play"
@@ -36,43 +36,19 @@
             android:gravity="center"
             android:text="@string/btn_caption_play"
             android:textSize="44sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            />
-    <TextView
-            android:id="@+id/txt_lemma"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:gravity="center"
-            android:textColor="@color/border_color"
-            android:textSize="30sp"
-            android:textStyle="italic"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            />
-    <TextView
-            android:id="@+id/txt_meaning"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:gravity="center"
-            android:textSize="24sp"
-            app:layout_constraintTop_toBottomOf="@+id/txt_lemma"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             />
     <TextView
             android:id="@+id/txt_blockpos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:textSize="24sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="8dp"
+            android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@+id/btn_play"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             tools:text="0-0"
             />
     <Button
@@ -82,14 +58,14 @@
             android:layout_marginBottom="16dp"
             android:text="@string/btn_caption_rewind"
             android:textSize="44sp"
-            app:layout_constraintStart_toEndOf="@+id/btn_prev_block"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/btn_prev_block"
             />
     <SeekBar
             android:id="@+id/sb_speed"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="8dp"
             android:max="15"
             android:min="5"
             android:progress="10"
@@ -102,8 +78,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:text="@string/tempo"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="@+id/sb_speed"
+            app:layout_constraintStart_toStartOf="parent"
             />
     <TextView
             android:id="@+id/txt_speed"
@@ -111,23 +87,24 @@
             android:layout_height="wrap_content"
             android:text="@string/pct100"
             android:textSize="18sp"
-            app:layout_constraintStart_toEndOf="@+id/sb_speed"
             app:layout_constraintBottom_toBottomOf="@+id/sb_speed"
+            app:layout_constraintStart_toEndOf="@+id/sb_speed"
             />
     <TextView
             android:id="@+id/farfarAway"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
-            android:gravity="center_horizontal"
+            android:background="@color/night_sky"
+            android:gravity="bottom|center_horizontal"
+            android:paddingBottom="16dp"
             android:scrollbars="vertical"
-            android:textColor="#5230FE"
-            android:textSize="18sp"
+            android:textColor="@color/sky_text_normal"
+            android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@+id/sb_speed"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_meaning"
+            app:layout_constraintTop_toTopOf="parent"
             />
     <ImageView
             android:id="@+id/img_thatsall"
@@ -139,7 +116,16 @@
             app:layout_constraintBottom_toTopOf="@+id/sb_speed"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_meaning"
             app:srcCompat="@drawable/thatsall"
+            />
+    <TextView
+            android:id="@+id/dummy_btn"
+            android:layout_width="74dp"
+            android:layout_height="76dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginBottom="20dp"
+            android:background="?attr/colorButtonNormal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/btn_play"
             />
 </androidx.constraintlayout.widget.ConstraintLayout>
